nextcloud/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: nextcloud
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: nextcloud
    spec:
      nodeSelector:
        kubernetes.io/hostname: wedge.radoncanyon.com
      volumes:
      - name: config
        hostPath:
          path: /dockerfs/nextcloud
      - name: mariadb
        hostPath:
          path: /dockerfs/nextcloud-mariadb
      - name: mariadb-databases
        hostPath:
          path: /dockerfs/nextcloud-mariadb/config/databases
      - name: mariadb-log
        hostPath:
          path: /dockerfs/nextcloud-mariadb/config/log
      - name: data
        persistentVolumeClaim:
          claimName: nextcloud-data
      containers:
      - name: nextcloud
        image: linuxserver/nextcloud:138
        volumeMounts:
        - name: config
          subPath: config
          mountPath: /config
        - name: data
          mountPath: /data
      - name: mariadb
        image: linuxserver/mariadb:130
        volumeMounts:
        - name: mariadb
          subPath: config
          mountPath: /config
        - name: mariadb-databases
          mountPath: /config/databases
        - name: mariadb-log
          mountPath: /config/log
        ports:
        - name: nextcloud
          containerPort: 443
