nextcloud/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: nextcloud
  annotations:
    ingress.kubernetes.io/class: nginx
    ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/secure-backends: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
spec:
  tls:
  - hosts:
    - nextcloud.desertbluffs.com
    secretName: desertbluffs-tls
  rules:
  - host: nextcloud.desertbluffs.com
    http:
      paths:
      - backend:
          serviceName: nextcloud
          servicePort: 443
